--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
 }
 
+springBoot {
+    mainClass = 'com.carbackend.CarbackendApplication'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
