--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: carbackend
   datasource:
-    url: jdbc:mysql://db:3306/cardb
+    url: jdbc:mysql://db:3306/cardb?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
